; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm/freescale/imx/extr_imx6_hdmi.c_imx_hdmi_detach.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm/freescale/imx/extr_imx6_hdmi.c_imx_hdmi_detach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.imx_hdmi_softc = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32*, i32 }

@SYS_RES_MEMORY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @imx_hdmi_detach to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @imx_hdmi_detach(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.imx_hdmi_softc*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call %struct.imx_hdmi_softc* @device_get_softc(i32 %4)
  store %struct.imx_hdmi_softc* %5, %struct.imx_hdmi_softc** %3, align 8
  %6 = load %struct.imx_hdmi_softc*, %struct.imx_hdmi_softc** %3, align 8
  %7 = getelementptr inbounds %struct.imx_hdmi_softc, %struct.imx_hdmi_softc* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i32*, i32** %8, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %11, label %23

11:                                               ; preds = %1
  %12 = load i32, i32* %2, align 4
  %13 = load i32, i32* @SYS_RES_MEMORY, align 4
  %14 = load %struct.imx_hdmi_softc*, %struct.imx_hdmi_softc** %3, align 8
  %15 = getelementptr inbounds %struct.imx_hdmi_softc, %struct.imx_hdmi_softc* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 8
  %18 = load %struct.imx_hdmi_softc*, %struct.imx_hdmi_softc** %3, align 8
  %19 = getelementptr inbounds %struct.imx_hdmi_softc, %struct.imx_hdmi_softc* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = load i32*, i32** %20, align 8
  %22 = call i32 @bus_release_resource(i32 %12, i32 %13, i32 %17, i32* %21)
  br label %23

23:                                               ; preds = %11, %1
  ret i32 0
}

declare dso_local %struct.imx_hdmi_softc* @device_get_softc(i32) #1

declare dso_local i32 @bus_release_resource(i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
